--- a/style.css
+++ b/style.css
@@ -8,21 +8,23 @@
  
 }
 .rectangulo
-
 {
     display: flex;/* para hacer flexible las columnas*/
-    margin: 15% auto;
+    margin-top: 129px;
+    margin-bottom: 129px;
+    margin-left: auto;
+    margin-right: auto;
     position: relative;
     background-color: white;
     width: 75%;
-    height: 400px;
+    height: 431px;
     border-radius: 10px;
     
     
 }
 .checks
 {
-    font-size: 15px;
+    font-size: 17px;
     width: 40%;
     padding-top: 120px;
     padding-left: 150px;
@@ -43,8 +45,8 @@
     border: solid 7px #bfbfbf;
     margin-top: 140px;
     background-color: red;
-    width: 110px;
-    height: 110px;
+    width: 115px;
+    height: 115px;
     border-radius: 50%;
     }
 .circle h1
